# crimchart

./: .metadata  README.md  analyze_output.txt  channel_features_migration.sql  channel_invitations_migration.sql  channel_invitations_policy.sql  channel_read_only_policies.sql  channel_schema_diff.md  channel_settings_migration.sql  channel_statuses_migration.sql  channel_tags_migration.sql  channel_unread_trigger.sql  pubspec.yaml  supabase_modular_migration.sql  tables.sql  test_r2.dart
android/: build.gradle.kts  gradle.properties  gradle_error.txt  out.txt
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  media_processor.cpp  video_decoder.cpp  video_decoder.h  video_engine.h  video_engine_jni.cpp
android/app/src/main/cpp/ffmpeg/: R.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: fold.dart  main.dart  test_pro_image.dart
lib/backicon/: custom_back_button.dart
lib/channelcreatepage/: channel_create_page.dart  channel_creation_settings_page.dart  channel_intro_page.dart  channel_invite_page.dart  channel_settings_page.dart
lib/channelcreatepage/subpages/: age_selection_page.dart  country_selection_page.dart
lib/chartappbar/: chart_app_bar.dart
lib/chartdialog/: chart_options_dialog.dart
lib/chartdialog/widgets/: channel_selector_row.dart
lib/commentingsheets/dummydata/: comment_dummy_data.dart
lib/commentingsheets/models/: comment_model.dart
lib/commentingsheets/widgets/: animated_send_button.dart  comment_input_field.dart  commenting_sheet.dart
lib/core/application/: audio_controller.dart
lib/core/db/: chart_db.dart  chart_db.g.dart  chart_native_db.dart  feed_repository.dart
lib/core/di/: injection.config.dart  injection.dart
lib/core/errors/: exceptions.dart  failures.dart
lib/core/localization/: app_base_translations.dart  app_strings.dart  localization_provider.dart
lib/core/models/: content_entity.dart
lib/core/native/: chart_native_ffi.dart  native_injectable.dart
lib/core/network/: api_client.dart  cloud_media_service.dart  network_exception_mapper.dart
lib/core/providers/: content_providers.dart
lib/core/router/: app_router.dart
lib/core/supabase/: supabase_config.dart
lib/core/theme/: app_theme.dart  card_colors.dart  design_system.dart  theme_provider.dart
lib/core/utils/: cache_manager.dart  responsive_size.dart
lib/core/video_engine/: native_engine.dart  player_pool.dart
lib/core/widgets/: app_avatar.dart  chart_image.dart  chart_linear_loader.dart  feed_item_widget.dart  thumbnail_link_widget.dart
lib/explore/models/: explore_item_model.dart
lib/explore/pages/: explore_page.dart
lib/explore/widgets/: explore_grid_item.dart  skeleton_explore_grid_item.dart
lib/features/allchannels/: all_channels_page.dart
lib/features/chartbutton/: chart_button.dart
lib/features/chartsitewidget/: common_chart_slide.dart
lib/features/inforsheet/: info_sheet.dart
lib/features/matrix_feed/: matrix_feed_demo.dart
lib/features/showcase/: chart_toast.dart  notification_showcase_page.dart
lib/features/widgets/: contestant_carousel.dart  messages_section.dart  pending_media_overlay.dart
lib/gifts/dummydata/: gift_dummy_data.dart
lib/gifts/horizontalgiftscroll/: horizontal_gift_scroll.dart
lib/gifts/models/: gift_model.dart  gift_recipient.dart
lib/gifts/widgets/: animated_gift_overlay.dart  gift_item.dart  gift_sheet.dart  premium_gift_button.dart
lib/loader/: chart_loader.dart
lib/mainFeed/dummydata/: channel_post_dummy_data.dart  charter_star_dummy_data.dart  common_channel_dummy_data.dart  elite_dummy_data.dart  explore_dummy_data.dart  feed_dummy_data.dart  story_dummy_data.dart
lib/mainFeed/menu/: main_feed_menu.dart
lib/mainFeed/pages/: export.dart  main_feed_page.dart  matrix_main_feed_page.dart
lib/posting/application/: music_service.dart  posting_controller.dart  posting_progress_provider.dart  posting_service.dart
lib/posting/models/: media_item.dart
lib/posting/pages/: post_page.dart
lib/posting/tabs/: audio_tab.dart  gallery_tab.dart  members_tab.dart  music_search_tab.dart  photos_tab.dart  videos_tab.dart
lib/profile/dummydata/: profile_dummy_data.dart
lib/profile/models/: charter_model.dart
lib/profile/pages/: discover_charts_page.dart  profile_page.dart
lib/profile/profileeditpages/: edit_profile_image_page.dart  edit_profile_page.dart  personal_information_page.dart
lib/profile/tabs/: audio_profile_tab.dart  photos_profile_tab.dart  videos_profile_tab.dart
lib/profile/widgets/: chart_status_card.dart  discover_charts.dart  media_grid_item.dart  skeleton_chart_card.dart
lib/settings/: settings_page.dart
lib/settings/localization/: account_selector_translations.dart  country_selector_translations.dart  google_signin_translations.dart  landing_page_translations.dart  localization.dart  login_translations.dart  mobile_number_translations.dart  onboarding_translations.dart  password_page_translations.dart  settings_translations.dart
lib/settings/subsettings/: about_page.dart  account_privacy_page.dart  activity_status_page.dart  add_account_page.dart  allow_comments_from_page.dart  blocked_commenters_page.dart  blocked_page.dart  comment_controls_page.dart  contacts_syncing_page.dart  data_saver_page.dart  (+20 more)
lib/signing/: account_selector_page.dart  birthday_page.dart  channel_intro_page.dart  channel_suggestions_page.dart  chart_title_page.dart  country_selector_page.dart  email_signup_page.dart  google_signin_page.dart  landing_page.dart  login_page.dart  mobile_number_page.dart  name_page.dart  otp_verification_page.dart  password_page.dart  photo_edit_page.dart  profile_picture_page.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
test/: thumbnail_link_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/native_lib/: CMakeLists.txt  media_processor.cpp  video_engine.cpp
windows/runner/: Runner.rc  main.cpp
(+434 files in other folders)
